begin proper work on the sonicadv/sound pages

--- a/japan/sonicadv/snd/cd_1.html
+++ b/japan/sonicadv/snd/cd_1.html
@@ -19,9 +19,9 @@
 <font color="#0000ff"><font size="4">Best Songs from Sonic Team</font></font><br>
 <br>
 <font size="2">発売元：<a href="http://www.mmv.co.jp">MMV（マーベラス）</a><br>
-販売元：ポニーキャニオン<br>
+Distributed by: ポニーキャニオン<br>
 発売日：1998/11/6<br>
-品番　：MJCA-00033<br>
+Item number: MJCA-00033<br>
 価格　：\2.310（税込み）<br>
 <br>
 「ソニックCD」から「バーニングレンジャー」までのベストヴォーカル曲を収録!!<br>
@@ -129,9 +129,9 @@ I hope people will enjoy listening to it as much as I have.<br>
 <br>
 <a href="m_order.html">・このCDを通販で買いたい!!</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
