--- a/japan/sonicadv/snd/cd_4b.html
+++ b/japan/sonicadv/snd/cd_4b.html
@@ -74,7 +74,7 @@
 <br>
 <a href="cd_4.html"><font color="#ff0000">・Digi-Log Conversationのページへ</font></a><br>
 <br>
-<a href="music_cd.html"><font color="#ff0000">・Music CDのページへ</font></a><br>
+<a href="music_cd.html"><font color="#ff0000">Go to the Music CD page</font></a><br>
 <br>
 <a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
