--- a/japan/sonicadv/snd/diary_ny.html
+++ b/japan/sonicadv/snd/diary_ny.html
@@ -60,7 +60,7 @@
 <br>
 <a href="r_diary.html"><font color="#ff0000">・Recording Diaryのページへ</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of Sound Website</font></a><br>
 <br>
 </font></td></tr>
 </table>
