--- a/japan/sonicadv/snd/index.html
+++ b/japan/sonicadv/snd/index.html
@@ -8,7 +8,7 @@
 <body>
 <body text="#000000" link="#ff0000" alink="#7777aa" vlink="#ff0000">
 <body background="graphic/back_dj.jpg">
-<!---------------------　スクロールする欄外の文字列の設定　--------------------->
+<!---------------------Setting the text outside the scrolling column--------------------->
 
 <body onLoad="timerONE=window.setTimeout('scrollit_r2l(100)',500);" <body>
 <p><script Language="JavaScript"><!--
@@ -64,21 +64,21 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 <font color="#ff0000">Feb./19/1999</font>
 <hr width=80%>
 <font color="#000000"><p align="left">
-皆さん、こんにちは!!<br>
-ソニックアドベンチャーのサウンドのサイトを楽しんで頂けていますか?<br>
+Hello, everyone!<br>
+We hope you're enjoying the Sonic Adventure Sound site.<br>
 <br>
-今回の更新では...ジャカジャ～ン!!!<br>
-お待たせしました。<br>
-ソニックやソニックチームに関連する音楽作品のページが出来ました。<br>
-よく考えたら、こういうデータベースって無かったのでチェックしてみて下さいね。<br>
-下の"Music CD"のところから入ってもらえると行けますよ!!<br>
+In this update...Jaka Jaka!!!!<br>
+Thank you for your patience.<br>
+A page of musical works related to Sonic and Sonic Team has been created.<br>
+If you think about it, there was no such database before, so check it out.<br>
+You can get to it by clicking on the Music CD link below!<br>
 <br>
-その他にもナイツのサウンド担当のささきさんが雑誌に登場とか、新着情報がいくつかあります。<br>
-詳しい内容は<a href="snd_info.html">"Information"</a>のページで確認してね。<br>
+There is also some other new information, such as the appearance of Mr. Sasaki, the sound designer of NiGHTS, in a magazine.<br>
+For more information, please check the <a href="snd_info.html">"Information"</a> page.<br>
 <br>
-初めての方には「はじめまして!!」<br>
-ここはソニックチームやソニックアドベンチャーのサイトよりも、サウンド面にスポットを当てた、ちょっとマニアックなサイトになるかも知れません。<br>
-まだまだこれから...という感じですがよろしくお願い致します。<br>
+For those who are new, nice to meet you!<br>
+This site may be a bit more geeky than the Sonic Team or Sonic Adventure sites, focusing more on the sound side of things.<br>
+This is just the beginning... We're just getting started.<br>
 </font>
 <p align="center">
 <hr width=80%><font color="#0000ff">SEGA CS Sound Team / SONIC ADVENTURE Section</font><br>
@@ -114,7 +114,7 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 <table border=1 width="360" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="http://www.sonicteam.com">・ソニックチームのサイトへ</a></font></td></tr>
+<a href="/index.html">Back to the TobinnSite</a></font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
 <!------------------------------　 メールはこちら 　------------------------------>
@@ -123,8 +123,8 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#eeeeee"><font size="2">
 <br>
-感想や質問、取り上げて欲しいこと...等を<br>
-メールで送ってね!!<br>
+Thoughts, questions, things we'd like you to cover... etc.<br>
+Email it to us.<br>
 <br>
 <br>
 <br>
@@ -134,7 +134,7 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 (C)SEGA ENTERPRISES, LTD. 1996<br>
 (C)SEGA ENTERPRISES, LTD. 1998<br>
 <br>
-無断転載を禁じます。でもリンクは歓迎します。<br>
+All rights reserved. Links are welcome.<br>
 <br>
 Copyright (c) SEGA Enterprises, Ltd. 1995 all rights reserved.<br>
 The copyrighted works contained in this information service shall not be copied,<br>
