--- a/japan/sonicadv/snd/other_01.html
+++ b/japan/sonicadv/snd/other_01.html
@@ -30,7 +30,7 @@ Presented by B.B.Queens<br>
 <p align="left">
 ”­”„Œ³FBMGƒrƒNƒ^[Š”®‰ïĞ<br>
 ”­”„“úF1992/7/26<br>
-•i”Ô@FBVRR-1<br>
+Item number: BVRR-1<br>
 ‰¿Ši@F\3.000iÅj<br>
 </font>
 </td></tr>
@@ -61,9 +61,9 @@ MEGA-CD—p‚ÌƒQ[ƒ€uƒeƒfƒBEƒ{[ƒCEƒuƒ‹[ƒXv‚Ì‘¼A—lX‚ÈƒQ[ƒ€‚Ì‹È‚ªƒ”ƒH[ƒJƒ‹ƒ
 <br>
 <a href="others.html">EŠÖ˜ACDƒ‘“à•Ò„‚Ìƒy[ƒW‚Ö</a><br>
 <br>
-<a href="music_cd.html">EMusic CD‚Ìƒy[ƒW‚Ö</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">ESound Web Site‚Ìƒgƒbƒvƒy[ƒW‚Ö</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
