--- a/japan/sonicadv/snd/r_d_ny.html
+++ b/japan/sonicadv/snd/r_d_ny.html
@@ -60,7 +60,7 @@ Feb./15/1999<br>
 <br>
 <a href="r_diary.html">・Recording Diaryのページへ</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
