--- a/japan/sonicadv/snd/rare_03.html
+++ b/japan/sonicadv/snd/rare_03.html
@@ -27,10 +27,10 @@ No.1 DANCE AMERICAN PIE<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：ARCADE MUSIC COMAPANY（スペイン盤）<br>
-販売元：Sony Music Spain<br>
-発売年：1995<br>
-品番　：3200692<br>
+Distributed by: Arcade Music Company (Spain)<br>
+Distributed by: Sony Music Spain<br>
+Release year: 1995<br>
+Item number: 3200692<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -53,11 +53,11 @@ No.1 DANCE AMERICAN PIE<br>
 <br>
 <a href="rare_04.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
