--- a/japan/sonicadv/snd/rare_15.html
+++ b/japan/sonicadv/snd/rare_15.html
@@ -26,10 +26,10 @@ SONIC DANCE POWER 3<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：Zomba Records（オランダ盤）<br>
-販売元：BMG. A Bertelsmann Music Group Company<br>
-発売年：1995<br>
-品番　：74321 291582<br>
+Released by: Zomba Records (Dutch)<br>
+Distributed by: BMG. A Bertelsmann Music Group Company<br>
+Release year: 1995<br>
+Item number: 74321 291582<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -52,11 +52,11 @@ SONIC DANCE POWER 3<br>
 <br>
 <a href="rare_16.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
