--- a/japan/sonicadv/snd/rare_19.html
+++ b/japan/sonicadv/snd/rare_19.html
@@ -27,9 +27,9 @@ VIRTUAL SONIC<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：Delta Music（アメリカ盤）<br>
-発売年：1996<br>
-品番　：12 813<br>
+Released by: Delta Music (American)<br>
+Release year: 1996<br>
+Item number: 12 813<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -73,11 +73,11 @@ VIRTUAL SONIC<br>
 <br>
 <a href="rare_20.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
