--- a/japan/sonicadv/snd/snd_info.html
+++ b/japan/sonicadv/snd/snd_info.html
@@ -332,7 +332,7 @@ I Just Smile ...from BURNING RANGERS<br>
 <br>
 <p align="center">タイトル：CLUB SEGA 2 ～Beat Grooves～<br>
 発売元：<a href="http://www.mmv.co.jp">株式会社マーベラスエンターテイメント</a><br>
-販売元：株式会社ポニーキャニオン<br>
+Distributed by: 株式会社ポニーキャニオン<br>
 発売日：1999/1/20<br>
 品番：MJCA-00040<br>
 価格：\3.150（税込み）<br>
