--- a/japan/sonicadv/snd/cd_2.html
+++ b/japan/sonicadv/snd/cd_2.html
@@ -21,9 +21,9 @@
 <font color="#0000ff"><font size="4">～Vocal mini-Album～</font></font><br>
 <br>
 <font size="2">発売元：<a href="http://www.mmv.co.jp">MMV（マーベラス）</a><br>
-販売元：ポニーキャニオン<br>
+Distributed by: ポニーキャニオン<br>
 発売日：1998/12/2<br>
-品番　：MJCA-00039<br>
+Item number: MJCA-00039<br>
 価格　：\2.100（税込み）<br>
 <br>
 ソニックアドベンチャーに登場するキャラクターのうち、ヴォーカル曲を用意したソニック、マイルス、ナックルズ、エミー、ビッグのテーマとメインテーマを収録したミニ・アルバム!!<br>
@@ -244,9 +244,9 @@ featuaring... Johnny Gioeli (Vo/ex.HARDLINE)    Jun Senoue (Gt/SEGA)    Naoto Sh
 <br>
 <a href="m_order.html">・このCDを通販で買いたい!!</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
