--- a/japan/sonicadv/snd/cd_3.html
+++ b/japan/sonicadv/snd/cd_3.html
@@ -20,7 +20,7 @@
 <br>
 <font size="2">発売元：<a href="http://www.toshiba-emi.co.jp">東芝EMI</a><br>
 発売日：1998/12/10<br>
-品番　：TOCP-65024<br>
+Item number: TOCP-65024<br>
 価格　：\2.548（税込み）<br>
 <br>
 元ナイン・インチ・ネイルズのクリス・ヴレナ、元ドリームシアターのケヴィン・ムーア、シスター・マシンガンのクリス・ランダル、元リヴィング・カラーのコーリー・グローヴァー、有名セッションギタリスト、アル・ピトレリ等...ソニック・アドベンチャーのドリームキャスト・デビューを飾るに相応しい超豪華アーティストが多数参加したリミックスアルバム！<br>
@@ -295,9 +295,9 @@ CMでおなじみのメインテーマのリミックス。<br>
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
