--- a/japan/sonicadv/snd/cd_4.html
+++ b/japan/sonicadv/snd/cd_4.html
@@ -20,9 +20,9 @@
 <font color="#0000ff"><font size="3">SONIC ADVENTURE Original Sound Track</font></font><br>
 <br>
 <font size="2">発売元：<a href="http://www.mmv.co.jp">MMV（マーベラス）</a><br>
-販売元：ポニーキャニオン<br>
+Distributed by: ポニーキャニオン<br>
 発売日：1999/1/20<br>
-品番　：MJCA-00034<br>
+Item number: MJCA-00034<br>
 価格　：\3.360（税込み）<br>
 <br>
 ソニックアドベンチャーに使用されたインストゥルメンタル楽曲をメインにフィーチャーしたオリジナル・サウンド・トラック盤が遂に登場!!<br>
@@ -89,9 +89,9 @@
 <br>
 <a href="m_order.html">・このCDを通販で買いたい!!</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
