--- a/japan/sonicadv/snd/cd_4a.html
+++ b/japan/sonicadv/snd/cd_4a.html
@@ -77,7 +77,7 @@
 <br>
 <a href="cd_4.html"><font color="#ff0000">・Digi-Log Conversationのページへ</font></a><br>
 <br>
-<a href="music_cd.html"><font color="#ff0000">・Music CDのページへ</font></a><br>
+<a href="music_cd.html"><font color="#ff0000">Go to the Music CD page</font></a><br>
 <br>
 <a href="index.html"><font color="#ff0000">・SONIC ADVENTURE Sound Section Web Siteのトップページへ</font></a><br>
 <br>
@@ -924,9 +924,9 @@ Music & Arrangement: J.Senoue</font></td></tr>
 <br>
 <a href="m_order.html"><font color="#ff0000">・このCDを通販で買いたい!!</font></a><br>
 <br>
-<a href="music_cd.html"><font color="#ff0000">・Music CDのページへ</font></a><br>
+<a href="music_cd.html"><font color="#ff0000">Go to the Music CD page</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of Sound Website</font></a><br>
 <br>
 </font></td></tr>
 </table>
