--- a/japan/sonicadv/snd/lyrics.html
+++ b/japan/sonicadv/snd/lyrics.html
@@ -68,7 +68,7 @@
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
 <a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
