--- a/japan/sonicadv/snd/other_02.html
+++ b/japan/sonicadv/snd/other_02.html
@@ -29,7 +29,7 @@ MEGA-CD SUPER MUSIC COLLECTION<br>
 <p align="left">
 発売元：徳間書店<br>
 発売日：1994<br>
-品番　：----<br>
+Item number: ----<br>
 価格　：----<br>
 </font>
 </td></tr>
@@ -69,9 +69,9 @@ from SONIC CD...<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
