--- a/japan/sonicadv/snd/other_04.html
+++ b/japan/sonicadv/snd/other_04.html
@@ -29,7 +29,7 @@ SONIC THE HEDGEHOG 3<br>
 <p align="left">
 発売元：アルファミュージック株式会社<br>
 発売日：1994/10/19<br>
-品番　：ALCA-5015<br>
+Item number: ALCA-5015<br>
 価格　：\2.300（税込）<br>
 </font>
 </td></tr>
@@ -76,9 +76,9 @@ SONIC THE HEDGEHOG 3<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
