--- a/japan/sonicadv/snd/other_07.html
+++ b/japan/sonicadv/snd/other_07.html
@@ -29,7 +29,7 @@ by Talking Moon<br>
 <p align="left">
 発売元：ポリグラム株式会社<br>
 発売日：1996/6/26<br>
-品番　：PODX-1011<br>
+Item number: PODX-1011<br>
 価格　：\800（税込）<br>
 </font>
 </td></tr>
@@ -66,9 +66,9 @@ by Talking Moon<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
