--- a/japan/sonicadv/snd/other_08.html
+++ b/japan/sonicadv/snd/other_08.html
@@ -29,7 +29,7 @@ Original Sound Track<br>
 <p align="left">
 発売元：ポリグラム株式会社<br>
 発売日：1996/7/9<br>
-品番　：POCX-1038<br>
+Item number: POCX-1038<br>
 価格　：\2.800（税込）<br>
 </font>
 </td></tr>
@@ -92,9 +92,9 @@ Original Sound Track<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
