--- a/japan/sonicadv/snd/other_09.html
+++ b/japan/sonicadv/snd/other_09.html
@@ -29,7 +29,7 @@ SOUND TRACKS<br>
 <p align="left">
 発売元：東芝EMI株式会社<br>
 発売日：1996/9/26<br>
-品番　：TYCY-5521<br>
+Item number: TYCY-5521<br>
 価格　：\2.000（税込）<br>
 </font>
 </td></tr>
@@ -89,9 +89,9 @@ SOUND TRACKS<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
