--- a/japan/sonicadv/snd/other_10.html
+++ b/japan/sonicadv/snd/other_10.html
@@ -29,7 +29,7 @@ Another Dreams<br>
 <p align="left">
 発売元：徳間ジャパン<br>
 発売日：1997/7/23<br>
-品番　：TKCA-71192<br>
+Item number: TKCA-71192<br>
 価格　：\2.500（税込）<br>
 </font>
 </td></tr>
@@ -82,9 +82,9 @@ Another Dreams<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
