--- a/japan/sonicadv/snd/other_11.html
+++ b/japan/sonicadv/snd/other_11.html
@@ -28,7 +28,7 @@ SEGA Vocal Entertainment<br>
 <p align="left">
 発売元：徳間ジャパン<br>
 発売日：1997/8/21<br>
-品番　：TKCA-71210<br>
+Item number: TKCA-71210<br>
 価格　：\3.059（税込）<br>
 </font>
 </td></tr>
@@ -72,9 +72,9 @@ SEGA Vocal Entertainment<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
