--- a/japan/sonicadv/snd/other_13.html
+++ b/japan/sonicadv/snd/other_13.html
@@ -27,9 +27,9 @@ SONIC R<br>
 <font size="2">
 <p align="left">
 発売元：株式会社マーベラスエンターテイメント<br>
-販売元：株式会社ポニーキャニオン<br>
+Distributed by: 株式会社ポニーキャニオン<br>
 発売日：1997/10/17<br>
-品番　：MJCA-00012<br>
+Item number: MJCA-00012<br>
 価格　：\2.310（税込）<br>
 </font>
 </td></tr>
@@ -86,9 +86,9 @@ SONIC R<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
