--- a/japan/sonicadv/snd/other_15.html
+++ b/japan/sonicadv/snd/other_15.html
@@ -30,9 +30,9 @@ GAME-sounds for music-CD<br>
 <font size="2">
 <p align="left">
 発売元：株式会社エアーズ<br>
-販売元：バンダイ・ミュージックエンタテインメント<br>
+Distributed by: バンダイ・ミュージックエンタテインメント<br>
 発売日：1998/5/21<br>
-品番　：AYCM-610<br>
+Item number: AYCM-610<br>
 価格　：\3.200（税込）<br>
 </font>
 </td></tr>
@@ -82,9 +82,9 @@ GAME-sounds for music-CD<br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
