--- a/japan/sonicadv/snd/other_16.html
+++ b/japan/sonicadv/snd/other_16.html
@@ -28,9 +28,9 @@ CLUB SEGA 2<br>
 <font size="2">
 <p align="left">
 発売元：株式会社マーベラスエンターテイメント<br>
-販売元：株式会社ポニーキャニオン<br>
+Distributed by: 株式会社ポニーキャニオン<br>
 発売日：1999/1/20<br>
-品番　：MJCA-00040<br>
+Item number: MJCA-00040<br>
 価格　：\2.940（税込）<br>
 </font>
 </td></tr>
@@ -80,13 +80,13 @@ CLUB SEGA 2<br>
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="other_01.html">・最初に戻ってみます!?</a><br>
+<a href="other_01.html">Let's go back to the beginning!</a><br>
 <br>
 <a href="others.html">・関連CD＜国内編＞のページへ</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
