--- a/japan/sonicadv/snd/rare_01.html
+++ b/japan/sonicadv/snd/rare_01.html
@@ -27,8 +27,8 @@ SONIC THE HEDGEHOG<br>
 <font size="2">
 <p align="left">
 発売元：----<br>
-発売年：----<br>
-品番　：----<br>
+Release year: ----<br>
+Item number: ----<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -53,11 +53,11 @@ SONIC THE HEDGEHOG<br>
 <br>
 <a href="rare_02.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
