--- a/japan/sonicadv/snd/rare_02.html
+++ b/japan/sonicadv/snd/rare_02.html
@@ -28,8 +28,8 @@ The Music From Sonic CD and Sonic Spinball<br>
 <font size="2">
 <p align="left">
 発売元：SEGA of America<br>
-発売年：1993<br>
-品番　：----<br>
+Release year: 1993<br>
+Item number: ----<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -85,11 +85,11 @@ The Music From Sonic CD and Sonic Spinball<br>
 <br>
 <a href="rare_03.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
