--- a/japan/sonicadv/snd/rare_05.html
+++ b/japan/sonicadv/snd/rare_05.html
@@ -26,10 +26,10 @@ SONIC・THE HEDGEHOG<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：ARCADE MUSIC COMPANY<br>
-販売元：ADS<br>
-発売年：1996<br>
-品番　：8800478<br>
+Distributed by: Arcade Music Company<br>
+Distributed by: ADS<br>
+Release year: 1996<br>
+Item number: 8800478<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -74,11 +74,11 @@ CD-Player Software<br>
 <br>
 <a href="rare_06.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
