--- a/japan/sonicadv/snd/rare_06.html
+++ b/japan/sonicadv/snd/rare_06.html
@@ -26,10 +26,10 @@ SONIC DANCE<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：ARCADE MUSIC COMAPANY（スペイン盤）<br>
-販売元：M.M.E.D.<br>
-発売年：1995<br>
-品番　：300 3252<br>
+Distributed by: Arcade Music Company (Spain)<br>
+Distributed by: M.M.E.D.<br>
+Release year: 1995<br>
+Item number: 300 3252<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -51,11 +51,11 @@ SONIC DANCE<br>
 <br>
 <a href="rare_07.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
