--- a/japan/sonicadv/snd/rare_09.html
+++ b/japan/sonicadv/snd/rare_09.html
@@ -26,10 +26,10 @@ SONIC DANCE 2<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：ARCADE DENMARK（デンマーク盤）<br>
-販売元：KAVAN<br>
-発売年：1996<br>
-品番　：8900 119<br>
+Released by: Arcade Denmark (Denmark)<br>
+Distributed by: KAVAN<br>
+Release year: 1996<br>
+Item number: 8900 119<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -51,11 +51,11 @@ SONIC DANCE 2<br>
 <br>
 <a href="rare_10.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
