--- a/japan/sonicadv/snd/rare_13.html
+++ b/japan/sonicadv/snd/rare_13.html
@@ -26,10 +26,10 @@ SONIC DANCE POWER 1<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：Scandinavian Records（ドイツ盤）<br>
-販売元：GDC A/S<br>
-発売年：1995<br>
-品番　：966 040-2<br>
+Released by: Scandinavian Records (Germany)<br>
+Distributed by: GDC A/S<br>
+Release year: 1995<br>
+Item number: 966 040-2<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -51,11 +51,11 @@ SONIC DANCE POWER 1<br>
 <br>
 <a href="rare_14.html">・次の作品を見てみたいっす!!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
