--- a/japan/sonicadv/snd/rare_20.html
+++ b/japan/sonicadv/snd/rare_20.html
@@ -26,9 +26,9 @@ CLUB SATURN<br>
 <tr><td align="center" bgcolor="#ffff00">
 <font size="2">
 <p align="left">
-発売元：Suburban Base Records（ヨーロッパ盤）<br>
-発売年：1996<br>
-品番　：BDRCD17<br>
+Released by: Suburban Base Records (Europe)<br>
+Release year: 1996<br>
+Item number: BDRCD17<br>
 </font>
 </td></tr>
 <!--------------------------------　 コメント 　-------------------------------->
@@ -73,13 +73,13 @@ CLUB SATURN<br>
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="rare_01.html">・最初に戻ってみます!?</a><br>
+<a href="rare_01.html">Let's go back to the beginning!</a><br>
 <br>
-<a href="rare_cd.html">・関連CD＜海外編＞のページへ</a><br>
+<a href="rare_cd.html">Go to related CDs (Overseas) page</a><br>
 <br>
-<a href="music_cd.html">・Music CDのページへ</a><br>
+<a href="music_cd.html">Go to the Music CD page</a><br>
 <br>
-<a href="index.html">・Sound Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of Sound Website</a><br>
 <br>
 </font></td></tr>
 </table>
