Fixed an embarrassing grammer error.

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <p>Name: SnakieJakie
 <br>Nickname(s): Jakie, Snakie
 <br>Likes: Boomer Shooters, 3d platformers, GZDoom modding, Strife, old MIDI and tracker music, dynamic lighting
-<br>I made Nirvana look good in Doom 2. In all seriously, I am a guy who is obsessed with the Doom engine. I am a ZDoom veteran, been with it since around 2013 or 2014-ish. Although I didn't make a ZDoom account untill 2020. Play Strife kids.</br></br></br></p>
+<br>I made Nirvana look good in Doom 2. In all seriousness, I am a guy who is obsessed with the Doom engine. I am a ZDoom veteran, been with it since around 2013 or 2014-ish. Although I didn't make a ZDoom forums account untill 2020. Play Strife kids.</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="pfs/bullettimetails.png" height="120px" width="120px" border="0px" alt="Tails"></p>
 <p>Name: BulletTimeTails
